# web

./: README.md  pyproject.toml
src/primerparcial/: __init__.py  forms.py  run.py
src/primerparcial/Templates/: Barra.html  Base.html  Categorias.html  Form.html  Home.html  Registro_eventos.html  index.html  registro_evento.html
