[project]
name = "primerparcial"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "JuanDavid601", email = "lhdj201987@gmail.com" }
]
dependencies = [
    "flask>=3.1.2",
    "flask-wtf>=1.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/primerparcial"]
